--- a/ietf/templates/codematch/matches/search_form.html
+++ b/ietf/templates/codematch/matches/search_form.html
@@ -21,6 +21,14 @@
     <div class="checkbox">
   		<label><input type="checkbox" name="coder">Coder</label>
 	</div>
+	
+	<div class="checkbox">
+  		<label><input type="checkbox" name="workinggroup">Working Group</label>
+	</div>
+    
+	<div class="checkbox">
+  		<label><input type="checkbox" name="area">Area</label>
+	</div>
     	
       <div class="input-group">
         {% render_field form.search class="form-control" placeholder="Search..." %}
