--- a/ietf/templates/codematch/requests/show.html
+++ b/ietf/templates/codematch/requests/show.html
@@ -154,7 +154,7 @@
                   </div>
 					<div class="widget-foot">
 						<div class="pull-right">
-							<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Cancel</a>
+							<a class="btn btn-default" href="{% url 'ietf.codematch.views.back' %}">Back</a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
