--- a/ietf/templates/codematch/requests/search_form.html
+++ b/ietf/templates/codematch/requests/search_form.html
@@ -3,8 +3,6 @@
 <form class="codematch-search clearfix" role="form">
 
   <div class="col-md-6">
-
-    <div class="form-group">
     	
     <div class="checkbox">
   		<label><input type="checkbox" name="title">Title</label>
@@ -25,6 +23,14 @@
 	<div class="checkbox">
   		<label><input type="checkbox" name="docs">RFC Document</label>
 	</div>
+	
+	<div class="checkbox">
+  		<label><input type="checkbox" name="workinggroup">Working Group</label>
+	</div>
+    
+	<div class="checkbox">
+  		<label><input type="checkbox" name="area">Area</label>
+	</div>
     	
       <div class="input-group">
         {% render_field form.search class="form-control" placeholder="Search..." %}
@@ -32,8 +38,6 @@
           <button class="btn btn-primary" type="submit" name="submit" value="search"><span class="fa fa-search"></span> Search</button>
 		</span>
       </div>
-
-    </div>
 
   </div>
 
