--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -58,7 +58,7 @@
 		</li>
 		
 		<li class="dropdown">
-			<a href="{% url "ietf.codematch.accounts.views.top_coders" %}">  <i class="fa fa-star" ></i>Coders Hall-of-Fame </a>
+			<a href="{% url "ietf.codematch.accounts.views.top_coders" %}">  <i class="fa fa-star" ></i>Top Coders</a>
 		</li>
 	  </ul>
 
