--- a/ietf/templates/base_codematch.html
+++ b/ietf/templates/base_codematch.html
@@ -20,6 +20,9 @@
 
     <!-- Analyse whether these stylesheets are used in base file, if not, add it through 'morecss' in the specific page -->
   <!-- Stylesheets -->
+      
+  <link rel="stylesheet" href="{% static 'css/chosen.css'%}" />    
+      
   <link href="{% static "css/bootstrap.css"%}" rel="stylesheet">
   <!-- Font awesome icon -->
   <link rel="stylesheet" href="{% static "css/font-awesome.min.css"%}">
@@ -113,7 +116,12 @@
 	<span class="totop"><a href="#"><i class="fa fa-chevron-up"></i></a></span>
 
 	<!-- Certainly these js are not necessary to all pages, then, just like css, it must be filtered -->
-
+  
+    <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.3/mootools-yui-compressed.js"></script>
+    <script src="{% static "js/mootools-more-1.4.0.1.js" %}"></script>
+    <script src="{% static "js/chosen.js" %}"></script>
+    <script src="{% static "js/Locale.en-US.Chosen.js" %}"></script>
+  
 	<!-- JS -->
 	<script src="{% static "js/jquery.js"%}"></script> <!-- jQuery -->
 	<script src="{% static "js/bootstrap.min.js"%}"></script> <!-- Bootstrap -->
