--- a/ietf/templates/codematch/requests/new.html
+++ b/ietf/templates/codematch/requests/new.html
@@ -77,7 +77,7 @@
 								<div class="form-group">
 									<label class="control-label col-xs-2">Mentor:</label>
 									<div class="col-xs-4">
-										{{ mentorform.as_p }}
+										<!--{{ mentorform.as_p }}-->
 									</div>
 								</div>
 								<div class="form-group">
@@ -92,7 +92,16 @@
 										{{ reqform.additional_information }}
 									</div>
 								</div>
-
+                                <div>
+                                <select data-placeholder="Choose a Country..." class="chzn-select" style="width:350px;">
+                                    <option value=""></option>
+                                    <option value="United States">United States</option>
+                                    <option value="United Kingdom">United Kingdom</option>
+                                    <option value="Afghanistan">Afghanistan</option>
+                                    <option value="Albania">Albania</option>
+                                    <option value="Algeria">Algeria</option>
+                                </select>
+                                </div>                                    
 								<br />
 
 								<div>
@@ -188,11 +197,7 @@
     <div class="clearfix"></div>
 
 </div>
+
+
 <!-- Content ends -->
-{% endblock %}
-
-{% block footer %}
-<script type="text/javascript" src="{% static 'admin/js/jquery.js'}"></script>
-
-{{ mentorform.media }}
 {% endblock %}
