Add function Sync, to update Persons and Users in local database

--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -92,7 +92,7 @@
 
             <!-- Dropdown menu -->
             <ul class="dropdown-menu">
-              <li><a rel="nofollow" href="{% url 'ietf.codematch.accounts.views.register' %}">Register Here</a></li>
+              <li><a rel="nofollow" href="https://datatracker.ietf.org/accounts/create/">Register Here</a></li>
               <li><a rel="nofollow" href="{% url 'django.contrib.auth.views.login' %}?next={% url 'ietf.codematch.views.index' %}">Sign in</a></li>
             </ul>
           </li>
