--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -21,7 +21,7 @@
 			<a href="{% url "ietf.codematch.views.index" %}" role="button" > Code<b>Match</b></a>
 		</li>
       	<li class="dropdown">
-			<a href="#" role="button" > <i class="fa fa-home"></i> </a>
+			<a href="{% url "ietf.codematch.views.dashboard" %}" role="button" > <i class="fa fa-home" aria-hidden="true"></i> </a>
 		</li>
 
 		<li class="dropdown">
