--- a/ietf/templates/codematch/widgets/my_requests.html
+++ b/ietf/templates/codematch/widgets/my_requests.html
@@ -30,7 +30,7 @@
                     {% if not forloop.first %}
                     ,
                     {% endif %}
-                   {{ tag }},
+                   {{ tag }}
                  {% endfor %}    
                  </p>
                 <p><b>CodeMatches:</b> 
