--- a/ietf/templates/codematch/dashboard.html
+++ b/ietf/templates/codematch/dashboard.html
@@ -11,7 +11,7 @@
 
         <!-- Page heading -->
         <div class="page-head">
-            <h2 class="pull-left"><i class="icon ion-arrow-shrink" style="font-size: 20px;"></i> Dashboard</h2>
+            <h2 class="pull-left"><i class="fa fa-home" style="font-size: 20px;"></i> My Dashboard</h2>
 
             <!-- Breadcrumb -->
             <div class="bread-crumb pull-right">
