--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -19,7 +19,7 @@
 		<div >
 			 <div class="padd">
 		  <!-- Widget content -->
-		  <p>Here comes the short description of IETF CodeMatch, informing its goals, results so fac, etc.</p>
+		  <!--<p>Here comes the short description of IETF CodeMatch, informing its goals, results so fac, etc.</p>-->
 
 		  <div style="margin: 20px 0">
 			<i class="icon ion-arrow-shrink" style="font-size: 30px; float: left; padding-top:5px"></i>
