--- a/ietf/templates/codematch/widgets/my_requests.html
+++ b/ietf/templates/codematch/widgets/my_requests.html
@@ -10,8 +10,9 @@
     <div class="widget-head">
       <div class="pull-left"><i class="fa fa-microphone"> </i> My CodeRequests</div>
       <div class="widget-icons pull-right">
+          <!--
         <a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a> 
-        <a href="#" class="wclose"><i class="fa fa-times"></i></a>
+        <a href="#" class="wclose"><i class="fa fa-times"></i></a>-->
       </div>  
       <div class="clearfix"></div>
     </div>
