--- a/ietf/templates/codematch/widgets/all_matches.html
+++ b/ietf/templates/codematch/widgets/all_matches.html
@@ -10,8 +10,9 @@
     <div class="widget-head">
       <div class="pull-left"><i class="fa fa-microphone"> </i> All CodeMatches</div>
       <div class="widget-icons pull-right">
+          <!--
         <a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a> 
-        <a href="#" class="wclose"><i class="fa fa-times"></i></a>
+        <a href="#" class="wclose"><i class="fa fa-times"></i></a>-->
       </div>  
       <div class="clearfix"></div>
     </div>
@@ -19,7 +20,7 @@
       <!-- Widget content -->
       <div class="padd">
         <ul class="latest-news">
-            {% for coding, projectcontainer, coder in codings %}
+            {% for coding, projectcontainer, coder in all_matches %}
           <li>
             <!-- Title and date -->
             <h6><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="#">{{ coder.name }}</a></h6>
