--- a/ietf/templates/codematch/widgets/my_matches.html
+++ b/ietf/templates/codematch/widgets/my_matches.html
@@ -10,8 +10,9 @@
     <div class="widget-head">
       <div class="pull-left"><i class="icon ion-arrow-shrink"> </i> My CodeMatches</div>
       <div class="widget-icons pull-right">
+          <!--
         <a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a> 
-        <a href="#" class="wclose"><i class="fa fa-times"></i></a>
+        <a href="#" class="wclose"><i class="fa fa-times"></i></a>-->
       </div>  
       <div class="clearfix"></div>
     </div>
@@ -21,7 +22,7 @@
       <div class="clearfix"></div>
         <ul class="project">
 
-            {% for coding, date, percentual, color in my_codings %}
+            {% for coding, date, percentual, color in my_matches %}
             <li>
                 <p>
                     <!-- Minus -->
