--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -19,7 +19,7 @@
 		<div >
 			 <div class="padd">
 		  <!-- Widget content -->
-		  <!--<p>Here comes the short description of IETF CodeMatch, informing its goals, results so fac, etc.</p>-->
+		  <p>Here comes the short description of IETF CodeMatch, informing its goals, results so fac, etc.</p>
 
 		  <div style="margin: 20px 0">
 			<i class="icon ion-arrow-shrink" style="font-size: 30px; float: left; padding-top:5px"></i>
@@ -38,7 +38,7 @@
 		   <div style="margin: 20px 0 ">
 			<i class="fa fa-star" style="font-size: 30px; float: left; padding-top:5px"></i>
 			<p style="padding-left: 44px">
-			<a href="{% url "ietf.codematch.accounts.views.top_coders" %}"> Coders Hall-of-Fame</a><br />
+			<a href="{% url "ietf.codematch.accounts.views.top_coders" %}"> Top Coders</a><br />
 			The stars of IETF CodeMatch!</p>
 		  </div>
 		  </div>
