--- a/static/css/widgets.css
+++ b/static/css/widgets.css
@@ -420,6 +420,8 @@
 
 /* Users ends */
 
+/* TODO MATHEUS:Lembrar de tirar isto daqui :*/
+
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
