fix version stable

--- a/ietf/templates/base_codematch.html
+++ b/ietf/templates/base_codematch.html
@@ -25,9 +25,9 @@
       
   <link href="{% static "css/bootstrap.css"%}" rel="stylesheet">
   <!-- Font awesome icon -->
-  <!--<link rel="stylesheet" href="{% static "css/font-awesome.min.css"%}">-->
+  <link rel="stylesheet" href="{% static "css/font-awesome.min.css"%}">
   <!-- Ionicons icon -->
-  <!--<link rel="stylesheet" href="{% static "css/ionicons.min.css"%}">-->
+  <link rel="stylesheet" href="{% static "css/ionicons.min.css"%}">
   <!-- jQuery UI -->
       
   <link rel="stylesheet" href="{% static "css/jquery-ui.css"%}">
